# Apate

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  FINAL_PRESENTATION.md  Makefile  PRESENTATION_GUIDE.md  PROBLEM_VALIDATION_ANALYSIS.md  README.md  SECURITY.md  SETUP.md  VALIDATION_SUMMARY.txt  alembic.ini  config.example.json  demo_integration.py  docker-compose-legacy.yml  docker-compose-monitoring.yml  docker-compose-security.yml  docker-compose.docs.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker_smoke_test.py  malware.sh  output.txt  progress.md  pyproject.toml  quick_setup.sh  requirements-dev.txt  requirements-full.txt  requirements.txt  setup_dev.bat  setup_dev.sh  start.sh  test_integration.py  test_layer1.py  test_layer2.py  (+4 more)
.devcontainer/: devcontainer.json
ai/: engine.py  models.py
alembic/: env.py
backend/: Dockerfile  __init__.py  docs_integration.py  init.sql  main.py  requirements.txt
config/: deployment_mode.yaml  generation_policy.yaml  ubuntu.yaml
data/: outcomes.csv  sequences.csv  sessions.csv
docs/: AI_ARCHITECTURE.md  AI_Engine_Plan.md  AI_LOGIC.md  AI_ROADMAP.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  DEPLOY.md  DEPLOYMENT.md  FOUNDATIONS.md  GUARDRAILS_STATUS.md  HOW_TO.md  IMPLEMENTATION_RESPONSE.md  LAYER0_SUMMARY.md  MANUAL.md  ONBOARDING.md  PHASE1_VALIDATION.md  PHASE4_SUMMARY.md  PROBLEM_ANALYSIS.md  PRODUCT_ROADMAP.md  QUICKSTART.md  REDUCERS.md  ROADMAP.md  SAFETY_AND_STABILITY_PLAN.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SETUP.md  STATUS.md  api_examples.md  (+2 more)
rust-protocol/: Cargo.toml  Dockerfile
rust-protocol/src/: circuit_breaker.rs  lib.rs  main.rs  protocol.rs  reducers.rs  utils.rs
src/chronos/dashboard/: Cargo.toml
src/chronos/dashboard/src/: app.rs  backend.rs  main.rs
(+127 files in other folders)
