[package]
name = "rust-protocol"
version = "0.1.0"
edition = "2021"

# Rust dependencies for networking and async operations
[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "rust_protocol"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
