[package]
name = "rust-protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_protocol"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Rust dependencies for networking and async operations
[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
pyo3 = { version = "0.22.0", features = ["extension-module"], optional = true }
regex = "1.10"
socket2 = "0.5"
rand = "0.8"

[[bin]]
name = "main"
path = "src/main.rs"
